Fixed topnews arts on mobile

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -580,5 +580,9 @@ article.infograficos
   padding: 20px
   font-size: rem(16)
 
+  .mobile-title,
+  .mobile-map
+    @extend %hide-on-desktop
+
   iframe
     margin-top: 20px
